--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,7 +14,7 @@
         <button class="btn btn-primary" id="login"  type="submit">Login</button>
       </div>
     <div class="form-group">
-        <button class="btn btn-primary" id="signup"  type="submit">Signup</button>
+        <button class="btn btn-primary" id="signup"  href="/signup" role="button">Signup</button>
       </div>
 
 <script src="./js/login.js"></script>
