--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,16 +18,18 @@
 }
 
 /* The navigation menu links */
-.sidenav a {
+.sidenav a, #logout {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
   font-size: 25px;
   color: black;
   display: block;
+  border: none;
+  background-color: lightgrey;
 }
 
 /* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
+.sidenav a:hover, #logout {
   color: #f1f1f1;
 }
 
