--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@
 }
 
 /* Style page content */
-.main .login-card{
+.main {
   margin-left: 160px; /* Same as the width of the sidebar */
   padding: 0px 10px;
   text-align: center;
