Fixed Model, FKey errors

--- a/views/discussion.handlebars
+++ b/views/discussion.handlebars
@@ -7,6 +7,9 @@
     {{/each}}
     </div>
     <form class="card-body new-post-form" id="new-post-form">
+        <label class="form-label" for="username">Enter Username</label>
+        <input id="username" name="username" class="form-input" />
+
         <label class="form-label" for="content">Comment here</label>
         <input id="content" name="content" class="form-input" />
 
