past books homeroute;placeholder images

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <div onload="displayBookInfo()">
     <h1>Book Of The Month</h1>
-    <img id="bookCover"></img>
+    <img id="bookCover" src="http://covers.openlibrary.org/b/oclc/472969902-L.jpg">
  
   </div>
 
