--- a/views/next-read.handlebars
+++ b/views/next-read.handlebars
@@ -29,7 +29,7 @@ BODY #tfooter {background: initial;border-top: none;}</STYLE>
 
 
 }catch(e){console.log('error',e)}</SCRIPT>
-<div style='text-align:center; margin:5px;'>Created with <a id="qp_foot3723952" href="https://www.quiz-maker.com/poll3723952x6d032360-112">QuizMaker</a></div></div><script src="//scripts.poll-maker.com/3012/scpolls.js" language="javascript"></script>
+<div style='text-align:center; margin:5px;'></div></div><script src="//scripts.poll-maker.com/3012/scpolls.js" language="javascript"></script>
 
     </div>
 
