--- a/views/past-books.handlebars
+++ b/views/past-books.handlebars
@@ -2,8 +2,8 @@
 <div class="card">
     <h3 class="card-header">Past Books</h3>
     <p>Explore discussions for previous books.</p>
-
-<a href="/discussion"><img src="http://covers.openlibrary.org/b/isbn/9780385533225-M.jpg" /></a>
-<a href="/discussion"><img src="http://covers.openlibrary.org/b/goodreads/2984417-M.jpg" /></a>
-<a href="/discussion"><img src="http://covers.openlibrary.org/b/goodreads/5320716-M.jpg" /></a>
-    </div>
+<div id="pastBooks">
+<a href="/discussion"><img src="http://covers.openlibrary.org/b/isbn/9780743273565-L.jpg" /></a>
+<a href="/discussion"><img src="http://covers.openlibrary.org/b/goodreads/1602701555-L.jpg" /></a>
+<a href="/discussion"><img src="http://covers.openlibrary.org/b/isbn/9780143039952-L.jpg" /></a>
+    </div></div>
