--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,11 +2,16 @@
     box-sizing: border-box;
     font-family:Arial, Helvetica, sans-serif;
     color: black;
+    background-color: #353535;
   }
 
 
-h1, h2 {
-  color: #353535;
+header h1 {
+  color: #fb8c00;
+}
+
+h1, h2, label {
+  color: white;
 }
 
 /* The sidebar menu */
