--- a/views/discussion.handlebars
+++ b/views/discussion.handlebars
@@ -1,5 +1,5 @@
 <div class="card">
-    <h3 class="card-header">Discussion</h3>
+    <h3 class="card-header bg-info">Discussion</h3>
     <p>Leave comments here to start the discussion on the current book of the month.</p>
     <div id="userComments">
     {{#each comment.content as |comment|}}
