--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,7 @@
 <div onload="displayBookInfo()">
-    <h1>Book Of The Month</h1>
-    <img id="bookCover" src="http://covers.openlibrary.org/b/oclc/472969902-L.jpg">
+    <h2>Book Of The Month</h1>
+    <img src="http://covers.openlibrary.org/b/isbn/0060766921-L.jpg" /></a>
+    
  
   </div>
 
