--- a/views/next-read.handlebars
+++ b/views/next-read.handlebars
@@ -1,5 +1,5 @@
 <div class="card">
-    <h3 class="card-header">Next Read</h3>
+    <h3 class="card-header bg-info">Next Read</h3>
     <p>Choose our book up for discussion next month!</p>
 
     <div onload="DisplayBook1()" id="nextBook1"></div>
