--- a/views/past-books.handlebars
+++ b/views/past-books.handlebars
@@ -1,9 +1,12 @@
 
 <div class="card">
-    <h3 class="card-header">Past Books</h3>
+    <h3 class="card-header bg-info">Past Books</h3>
     <p>Explore discussions for previous books.</p>
 <div id="pastBooks">
-<a href="/discussion"><img src="http://covers.openlibrary.org/b/isbn/9780743273565-L.jpg" /></a>
-<a href="/discussion"><img src="http://covers.openlibrary.org/b/goodreads/1602701555-L.jpg" /></a>
-<a href="/discussion"><img src="http://covers.openlibrary.org/b/isbn/9780143039952-L.jpg" /></a>
+    <a href="/discussion"><img src="http://covers.openlibrary.org/b/oclc/20921600
+-M.jpg" /></a>
+    
+<a href="/discussion"><img src="http://covers.openlibrary.org/b/isbn/9780743273565-M.jpg" /></a>
+
+<a href="/discussion"><img src="http://covers.openlibrary.org/b/isbn/9780143039952-M.jpg" /></a>
     </div></div>
