--- a/views/ratings.handlebars
+++ b/views/ratings.handlebars
@@ -1,5 +1,5 @@
 <div onload="displayBookInfo()" class="card">
-    <h3 class="card-header">Ratings</h3>
+    <h3 class="card-header bg-info">Ratings</h3>
     <p>Choose your rating out of 5 stars for the current book of the month.</p>
     <div id="userRatings">
     {{#each ratings.score as |rating|}}
