--- a/views/partials/comment-body.handlebars
+++ b/views/partials/comment-body.handlebars
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header">
-       <h4><a class="link" href="/comment/{{id}}">{{title}}</a></h4>
+       <h4><a class="link" href="/discussion/{{id}}">{{title}}</a></h4>
         <p>Posted by {{user.username}} on {{format_date created_at}}</p>
     </div>
         <p class="card-body">{{content}}</p>
