--- a/views/discussion.handlebars
+++ b/views/discussion.handlebars
@@ -6,7 +6,7 @@
   {{> comment-body}}
     {{/each}}
     </div>
-    <form class="card-body new-post-form" id="new-post-form">
+    <form class="comment-form card-body new-post-form" id="new-post-form">
         <label class="form-label" for="username">Enter Username</label>
         <input id="username" name="username" class="form-input" />
 
