--- a/views/discussion.handlebars
+++ b/views/discussion.handlebars
@@ -13,7 +13,7 @@
         <label class="form-label" for="content">Comment here</label>
         <input id="content" name="content" class="form-input" />
 
-        <button type="submit" class="btn">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
 
