--- a/views/partials/comment-body.handlebars
+++ b/views/partials/comment-body.handlebars
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header">
-       <h4><a class="link" href="/discussion/{{id}}">{{title}}</a></h4>
-        <p>Posted by {{user.username}} on {{format_date created_at}}</p>
+       <h4><a class="link" href="/discussion/{{id}}">Discussion on Book {{book_id}}</a></h4>
+        <p>Posted by {{user_id}} </p>
     </div>
         <p class="card-body">{{content}}</p>
 </div>
